# mio2it

./: BUILDING.md  CMakeLists.txt  LICENSE  README.md
docs/: it.hexpat  mio.hexpat  sdat.hexpat
src/: endian.hpp  filesystem.hpp  io.cpp  io.hpp  it.cpp  it.hpp  main.cpp  mio.cpp  mio.hpp  types.hpp  utils.hpp  version.hpp.in
